--- a/client/src/css/Contact.css
+++ b/client/src/css/Contact.css
@@ -1,26 +1,7 @@
-html, body {
-    height: 100%;
-    margin: 0;
+.contactLink {
+    color: black
 }
-
-.Contact {
-    position: fixed;
-    min-height: 100%;
-    min-width: 100%;
-    background-color: #f9f9f9;
-    padding: 10px;
-}
-
-#outerGrid {
-    display: grid;
-    grid-template-columns: auto auto;
-}
-
-#item1, #item2 {
-    grid-row-start: 1;
-}
-
-#item3 {
-    grid-row: 2;
-    grid-column: 1 / 3;
+.contactLink:hover {
+    color: black;
+    text-decoration: underline;
 }
