--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@ html, body {
   position: fixed;
   min-height: 100%;
   min-width: 100%;
+  background: url('./images/test1.jpg');
   background-size: cover;
   background-position: center center;
   overflow: hidden;
