--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,62 @@
 html, body {
   height: 100%;
   margin: 0;
+  background-color: #f8f9fa;
 }
 
-.Home {
-  position: fixed;
-  min-height: 100%;
-  min-width: 100%;
-  background: url('./images/test1.jpg');
-  background-size: cover;
-  background-position: center center;
-  overflow: hidden;
+/* Larger screens */
+@media not screen and (max-width: 600px) {
+  .Home {
+    position: fixed;
+    min-height: 100%;
+    min-width: 100%;
+    background: url('./images/test1.jpg');
+    background-size: cover;
+    background-position: center center;
+    overflow: hidden;
+  }
+
+  #enterLink {
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    font-size: 2em;
+    color: #f8f9fa;
+    text-decoration: none;
+    border: 2px solid #f8f9fa;
+    border-radius: 10px;
+    padding: 5px 10px;
+    position: fixed;
+    top: 50%;
+    left: 20%;
+  }
+
+  #enterLink:hover {
+    color: white;
+    border: 2px solid white;
+  }
 }
 
-#enterLink {
-  font-family: "Helvetica Neue", Arial, sans-serif;
-  font-size: 2em;
-  color: #93969b;
-  text-decoration: none;
-  border: 2px solid #93969b;
-  border-radius: 10px;
-  padding: 5px 10px;
-  position: fixed;
-  top: 50%;
-  left: 20%;
-}
+/* Phone and smaller screens */
+@media only screen and (max-width: 600px) {
+  .Home {
+    position: fixed;
+    min-height: 100%;
+    min-width: 100%;
+    background: url('./images/test1.jpg');
+    background-attachment: fixed;
+    background-position: center center;
+    overflow: hidden;
+  }
 
-
-#enterLink:hover {
-  color: white;
-  border: 2px solid white;
+  #enterLink {
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    font-size: 1.5em;
+    color: #f8f9fa;
+    text-decoration: none;
+    border: 2px solid #f8f9fa;
+    border-radius: 10px;
+    padding: 5px 10px;
+    position: fixed;
+    top: 10%;
+    left: 45%;
+  }
 }
