--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   margin: 0;
-  background-color: #f8f9fa;
+  background-color: #f9f9f9;
 }
 
 /* Larger screens */
@@ -21,7 +21,7 @@ html, body {
     font-size: 2em;
     color: #f8f9fa;
     text-decoration: none;
-    border: 2px solid #f8f9fa;
+    border: 2px solid #f9f9f9;
     border-radius: 10px;
     padding: 5px 10px;
     position: fixed;
