--- a/client/src/css/Gallery.css
+++ b/client/src/css/Gallery.css
@@ -1,4 +1,4 @@
-.Gallery, .photoClass, .logo {
+.photoClass, .logo {
     max-width: 90%;
     margin: auto;
 }
@@ -36,13 +36,6 @@
         text-align: center;
     }
 
-    .logo {
-        width: 100px;
-        margin: auto;
-        display: block;
-        padding-top: 10px;
-    }
-
     .filterDropdown {
         margin-right: 50px;
     }
@@ -62,14 +55,6 @@
 
     .Gallery h3 {
         display: none;
-    }
-
-
-    .logo {
-        width: 50px;
-        margin: auto;
-        display: block;
-        padding-top: 10px;
     }
 
     #links-filter {
