--- a/client/src/css/Navigation.css
+++ b/client/src/css/Navigation.css
@@ -1,44 +1,3 @@
-.Sidebar {
-  background-color: #f9f9f9;
-  position: fixed;
-  height: 100%;
-  width: 0px;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  padding-top: 10px;
-  border-right: 1px solid #2d2d2d;
-  transition: 0.5s;
-}
-
-.Menu {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.Menu li {
-  width: 100%;
-  text-decoration: none;
-  color: #2d2d2d;
-  padding-bottom: 20px;
-  text-align: center;
-  transition: 0.3s;
-}
-
-.Menu li:hover {
-  text-decoration: underline #2d2d2d;
-}
-
-.closeBtn {
-  display: inline;
-  padding: 5px;
-  position:relative;
-  top: 10px;
-}
-
-.Sidebar p:hover {
-  text-decoration: underline #2d2d2d;
-  cursor: pointer;
+.logo {
+  width: 50px;
 }
