--- a/client/src/css/Gallery.css
+++ b/client/src/css/Gallery.css
@@ -26,6 +26,13 @@
         margin: 5px;
         text-align: center;
     }
+
+    .Spinner {
+      margin: auto;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+    }
 }
 
 /* Phone and smaller screens */
